# poetry-vendor-plugin

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
example/: .gitignore  README.md  pyproject.toml
poetry_vendor_plugin/: __init__.py  commands.py  plugins.py
tests/: conftest.py  test_add_commands.py  test_commands.py  test_list_command.py  test_pull_command.py
