[tool.poetry]
name = "poetry-vendor-plugin"
version = "0.2.3"
description = "Vendor internal packages from private PyPI for offline production deployments"
authors = ["Jörg Koch simplepoetryplugindeveloper@proton.me"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/simplepoetryplugindeveloper/poetry-vendor-plugin"
keywords = ["poetry", "plugin", "vendor", "offline", "air-gapped", "private-pypi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.poetry.dependencies]
python = "^3.9"
poetry = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[tool.poetry.plugins."poetry.application.plugin"]
vendor = "poetry_vendor_plugin.plugins:VendorPlugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
